--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Pet Place</title>
+    <title>Web Design Mastery | Pet Care Hub</title>
   </head>
   <body>
     <nav>
       <div class="nav__header">
         <div class="nav__logo">
-          <a href="#">Pet Place</a>
+          <a href="#">Pet Care Hub</a>
         </div>
         <div class="nav__menu__btn" id="menu-btn">
           <i class="ri-menu-line"></i>
@@ -323,7 +323,7 @@
       <div class="section__container footer__container">
         <div class="footer__col">
           <div class="footer__logo">
-            <a href="#">Pet Place</a>
+            <a href="#">Pet Care Hub</a>
           </div>
         </div>
         <div class="footer__col">
@@ -334,15 +334,15 @@
             <li><a href="#">Services</a></li>
             <li><a href="#">Store</a></li>
             <li><a href="#">Pricing</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Faq</a></li>
+            <!-- <li><a href="#">Blog</a></li> -->
+            <!-- <li><a href="#">Faq</a></li> -->
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
         <div class="footer__col">
           <h4>Address</h4>
           <ul class="footer__links">
-            <li><a href="#">New Delhi, India</a></li>
+            <li><a href="#">Varanasi, India</a></li>
             <li><a href="#">View on Maps</a></li>
           </ul>
           <br />
@@ -379,9 +379,9 @@
             <li>
               <a href="#"><i class="ri-instagram-line"></i></a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#"><i class="ri-tiktok-fill"></i></a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
