--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
           <ul class="footer__links">
             <li><a href="#">+91 0987654321</a></li>
             <li><a href="#">info@website.com</a></li>
+            <li><a href="#">Made by Yogita Singh</a></li>
           </ul>
         </div>
         <div class="footer__col">
