--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Pet Care Hub</title>
+    <title>Pet Care Hub</title>
   </head>
   <body>
     <nav>
